[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/Scenes/Player/PlayerBullet.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/Sprites/Godot_icon.svg.png" type="Texture" id=2]
[ext_resource path="res://Assets/Scenes/Player/Player.gd" type="Script" id=3]

[sub_resource type="CapsuleShape2D" id=1]
radius = 33.0
height = 0.0

[node name="Player" type="KinematicBody2D" groups=[
"player",
]]
script = ExtResource( 3 )
bullet = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.042, 0.042 )
texture = ExtResource( 2 )

[node name="Hitbox" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="FirePoint" type="Node2D" parent="."]

[node name="ShotCooldown" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[connection signal="timeout" from="ShotCooldown" to="." method="_on_ShotCooldown_timeout"]
